Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
 
     <!-- Replace this div with a main tag to wrap the 'main' content of the webpage-->
-    <div>
+    <main>
 
       <!-- Replace this div with a section tag to better describe this portion of content -->
       <div>
@@ -95,7 +95,7 @@
         <span>&copy; 2014 Exceptional Realty.</span>
         <p>All Rights Reserved.</p>
       </div>
-    </div>
+    </main>
 
   </body>
 </html>
